[workspace]
members = ["derive"]

[package]
name = "npsd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Network payload serializer / deserializer framework"
repository = "https://github.com/vmolsa/npsd"
documentation = "https://docs.rs/npsd"
categories = ["network-programming"]
keywords = ["serialize", "deserialize"]
readme = "README.md"

[dependencies]
thiserror = "1.0.61"
npsd-schema = { path = "derive", version = "0.1.0" }
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
uuid = { version = "1.8.0", features = ["std", "v4", "v7"], optional = true }
fxhash = { version = "0.2.1", optional = true }
chrono = { version = "0.4.38", optional = true }

[features]
default = []
tracing = []
raw_pointers = []

[dev-dependencies]
pretty-hex = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["std", "v4", "v7", "serde"] }
bincode = "1.3.3"
serde_json = "1.0.118"
postcard = { version = "1.0.8", features = [ "alloc" ] }

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]