[package]
name = "npsd-schema"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Implementation of #[derive(Schema, Bitmap, AsyncSchema, AsyncBitmap, Info)]"
repository = "https://github.com/vmolsa/npsd"
documentation = "https://docs.rs/npsd"
categories = ["network-programming"]
keywords = ["serialize", "deserialize"]
workspace = ".."
readme = "README.md"

[lib]
name = "npsd_schema"
proc-macro = true

[dependencies]
syn = { version = "2.0.68", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"

[features]
default = []